--- a/style.css
+++ b/style.css
@@ -25,3 +25,13 @@ h2 {
   color: #333;
   margin-bottom: 10px;
 }
+textarea {
+  width: 100%;
+  height: 140px;
+  font-size: 16px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: vertical;
+  box-sizing: border-box;
+}
