--- a/style.css
+++ b/style.css
@@ -56,3 +56,9 @@ button:hover {
   border-radius: 5px;
   display: none;
 }
+.result-box {
+  display: block;
+  background: #e9f7ef;
+  border: 1px solid #c3e6cb;
+  color: #155724;
+}
